--- a/hamcrestmatchers/pom.xml
+++ b/hamcrestmatchers/pom.xml
@@ -2,16 +2,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>parent</artifactId>
-        <groupId>com.gmaur.java</groupId>
-        <version>0.0.1-SNAPSHOT</version>
-    </parent>
-    <modelVersion>4.0.0</modelVersion>
 
+   <modelVersion>4.0.0</modelVersion>
     <groupId>com.gmaur.scratchpad</groupId>
     <artifactId>hamcrestmatchers</artifactId>
 
+    <parent>
+        <groupId>com.github.alvarogarcia7</groupId>
+        <artifactId>java-parent</artifactId>
+        <version>v0.0.1</version>
+    </parent>
+ 
     <dependencies>
         <dependency>
             <groupId>org.hamcrest</groupId>
